--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,9 @@ body {
     border: none;
     cursor: pointer;
   }
+
+  @media screen and (max-width: 768px) {
+    button {
+      width: 100%;
+    }
+  }
