--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,12 @@ body {
   }
   
   button {
-    padding: 10px 20px;
-    font-size: 24px;
+    padding: 10px;
+    font-size: 32px;
     background-color: green;
     color: white;
     border: none;
     cursor: pointer;
-  }
-
-  @media screen and (max-width: 1440px) {
-    button {
-      width: 100%;
-    }
+    width: 100%;
+    display: block;
   }
