--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
   button {
     padding: 10px;
     font-size: 32px;
-    background-color: green;
+    background-color: orange;
     color: white;
     border: none;
     cursor: pointer;
