--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,12 @@ body {
   
   button {
     padding: 10px;
-    font-size: 32px;
+    font-size: 120px;
     background-color: orange;
     color: white;
     border: none;
     cursor: pointer;
     width: 100%;
+    height: 100%;
     display: block;
   }
